update with more doc and client and ...
